tests/baselines/reference/higherKindedTypesLift2.errors.txt
tests/cases/compiler/higherKindedTypesLift2.ts(16,45): error TS2344: Type 'BX' does not satisfy the constraint 'AXBound'.
tests/cases/compiler/higherKindedTypesLift2.ts(19,44): error TS2344: Type 'FunctorFoo<AFoo>' does not satisfy the constraint 'Functor<CX, AFoo, AFoo>'.
  Types of property 'map' are incompatible.
    Type '<BFoo>(fmapfoo: FMap<AFoo, BFoo>) => FunctorFoo<BFoo>' is not assignable to type '<BX>(fmapx: (fmapxax: AFoo) => BX) => CX'.
      Type 'FunctorFoo<BX>' is not assignable to type 'CX'.
        Types of property 'map' are incompatible.
          Type '<BFoo>(fmapfoo: FMap<BX, BFoo>) => FunctorFoo<BFoo>' is not assignable to type '<BX>(fmapx: (fmapxax: AX) => BX) => CX'.
            Types of parameters 'fmapfoo' and 'fmapx' are incompatible.
              Types of parameters 'fmapxax' and 'fmapfa' are incompatible.
                Type 'BX' is not assignable to type 'AX'.
tests/cases/compiler/higherKindedTypesLift2.ts(32,22): error TS2344: Type 'AS' does not satisfy the constraint 'SCTBound'.
tests/cases/compiler/higherKindedTypesLift2.ts(32,51): error TS2344: Type 'BS' does not satisfy the constraint 'SCTBound'.
tests/cases/compiler/higherKindedTypesLift2.ts(36,68): error TS2344: Type 'C1' does not satisfy the constraint 'Functor<CX, T1Bound, T1Bound>'.
  Type 'Functor<C1, T1Bound, T1Bound>' is not assignable to type 'Functor<CX, T1Bound, T1Bound>'.
    Type 'C1' is not assignable to type 'CX'.
      Type 'Functor<C1, T1Bound, T1Bound>' is not assignable to type 'CX'.
        Types of property 'map' are incompatible.
          Type '<BX>(fmapx: (fmapxax: T1Bound) => BX) => C1' is not assignable to type '<BX>(fmapx: (fmapxax: AX) => BX) => CX'.
            Types of parameters 'fmapx' and 'fmapx' are incompatible.
              Types of parameters 'fmapxax' and 'fmapxax' are incompatible.
                Type 'T1Bound' is not assignable to type 'AX'.
tests/cases/compiler/higherKindedTypesLift2.ts(36,116): error TS2344: Type 'A1' does not satisfy the constraint 'T1Bound'.
tests/cases/compiler/higherKindedTypesLift2.ts(36,146): error TS2344: Type 'B1' does not satisfy the constraint 'T1Bound'.
tests/cases/compiler/higherKindedTypesLift2.ts(79,30): error TS2345: Argument of type '<C1 extends Functor<C1, T1Bound, T1Bound>, T1Bound, A1, B1>(fa1: C1, fmap1: FMap<A1, B1>) => C1' is not assignable to parameter of type 'StaticFunctor<C, {}, {}>'.
  Types of parameters 'fa1' and 'fa2' are incompatible.
    Type 'C' is not assignable to type 'Functor<C1, {}, {}>'.
      Type 'ActBound & Bounded<C, ActBound, AS, ActTBound>' is not assignable to type 'Functor<C1, {}, {}>'.
        Property 'map' is missing in type 'Bounded<C, ActBound, AS, ActTBound>'.
tests/cases/compiler/higherKindedTypesLift2.ts(87,42): error TS2345: Argument of type 'StaticFunctor<Functor<CX, AX, AXBound>, Functor<CX, AX, AXBound>, {}>' is not assignable to parameter of type 'StaticFunctor<C, Functor<CX, AX, AXBound>, {}>'.
  Types of parameters 'fa2' and 'fa2' are incompatible.
    Type 'C' is not assignable to type 'Functor<CX, AX, AXBound>'.
      Type 'ActBound & Bounded<C, ActBound, AS, ActTBound>' is not assignable to type 'Functor<CX, AX, AXBound>'.
        Property 'map' is missing in type 'Bounded<C, ActBound, AS, ActTBound>'.


==== tests/cases/compiler/higherKindedTypesLift2.ts (9 errors) ====
    export interface FMap<FA, FB> {
        (fmapfa: FA): FB
    }
    
    interface Bounded<
        BC<_BCT> extends Bound<BC, _BCT>,
        Bound<
            _BC<__BCT>,
            _BT
        >,
        BT extends BTBound,
        BTBound = BT
    > {}
    
    interface Functor<CX<_TX extends AXBound> extends Functor<CX, AX, AXBound>, AX extends AXBound, AXBound = AX> extends Bounded<CX, Functor, AX, AXBound> {
        map<BX>(fmapx: (fmapxax: AX) => BX): CX<BX>;
                                                ~~
!!! error TS2344: Type 'BX' does not satisfy the constraint 'AXBound'.
    }
    
    interface FunctorFoo<AFoo> extends Functor<FunctorFoo, AFoo> {
                                               ~~~~~~~~~~
!!! error TS2344: Type 'FunctorFoo<AFoo>' does not satisfy the constraint 'Functor<CX, AFoo, AFoo>'.
!!! error TS2344:   Types of property 'map' are incompatible.
!!! error TS2344:     Type '<BFoo>(fmapfoo: FMap<AFoo, BFoo>) => FunctorFoo<BFoo>' is not assignable to type '<BX>(fmapx: (fmapxax: AFoo) => BX) => CX'.
!!! error TS2344:       Type 'FunctorFoo<BX>' is not assignable to type 'CX'.
!!! error TS2344:         Types of property 'map' are incompatible.
!!! error TS2344:           Type '<BFoo>(fmapfoo: FMap<BX, BFoo>) => FunctorFoo<BFoo>' is not assignable to type '<BX>(fmapx: (fmapxax: AX) => BX) => CX'.
!!! error TS2344:             Types of parameters 'fmapfoo' and 'fmapx' are incompatible.
!!! error TS2344:               Types of parameters 'fmapxax' and 'fmapfa' are incompatible.
!!! error TS2344:                 Type 'BX' is not assignable to type 'AX'.
        map<BFoo>(fmapfoo: FMap<AFoo, BFoo>): FunctorFoo<BFoo>;
        fooVal: AFoo
    }
    
    interface StaticFunctor<
        SC<_T extends SCTBound> extends SCBound<SC, _T> & Bounded<SC, SCBound, _T, SCTBound>,
        SCBound<
         _BC<__BCT>,
         _BT
        >,
        SCTBound = {}
    > {
        <AS, BS>(fa2: SC<AS>, fmap2: FMap<AS,BS>): SC<BS>
                         ~~
!!! error TS2344: Type 'AS' does not satisfy the constraint 'SCTBound'.
                                                      ~~
!!! error TS2344: Type 'BS' does not satisfy the constraint 'SCTBound'.
    }
    
    
    declare function staticMap<C1<_T1 extends T1Bound> extends Functor<C1, T1Bound, T1Bound>, T1Bound, A1, B1>(fa1: C1<A1>, fmap1: FMap<A1, B1>): C1<B1>;
                                                                       ~~
!!! error TS2344: Type 'C1' does not satisfy the constraint 'Functor<CX, T1Bound, T1Bound>'.
!!! error TS2344:   Type 'Functor<C1, T1Bound, T1Bound>' is not assignable to type 'Functor<CX, T1Bound, T1Bound>'.
!!! error TS2344:     Type 'C1' is not assignable to type 'CX'.
!!! error TS2344:       Type 'Functor<C1, T1Bound, T1Bound>' is not assignable to type 'CX'.
!!! error TS2344:         Types of property 'map' are incompatible.
!!! error TS2344:           Type '<BX>(fmapx: (fmapxax: T1Bound) => BX) => C1' is not assignable to type '<BX>(fmapx: (fmapxax: AX) => BX) => CX'.
!!! error TS2344:             Types of parameters 'fmapx' and 'fmapx' are incompatible.
!!! error TS2344:               Types of parameters 'fmapxax' and 'fmapxax' are incompatible.
!!! error TS2344:                 Type 'T1Bound' is not assignable to type 'AX'.
                                                                                                                       ~~
!!! error TS2344: Type 'A1' does not satisfy the constraint 'T1Bound'.
                                                                                                                                                     ~~
!!! error TS2344: Type 'B1' does not satisfy the constraint 'T1Bound'.
    
    
    interface LiftedResult<
        LC<_LT extends LRTBound> extends LRCBound<LC, _LT> & Bounded<LC, LRCBound, _LT, LRTBound>,
        LRCBound<
        _BC<__BCT>,
        _BT
       >,
       LRTBound 
    > {
        <LA, LB>(lmap: FMap<LA,LB>): LiftedResult2<LC, LA, LB, LRCBound>
    }
    
    interface LiftedResult2<
        LC2<_LT extends LA2 | LB2> extends LRC2Bound<LC2, _LT> & Bounded<LC2, LRC2Bound, _LT, LA2 | LB2>, 
        LA2,
        LB2,
        LRC2Bound<
            _BC<__BCT>,
            _BT
        >,
        > extends FMap<LC2<LA2>, LC2<LB2>>{}
    
    declare function lift<
        C<_T extends ActTBound> extends ActBound & Bounded<C, ActBound, _T, ActTBound>,
        ActBound,
        ActTBound
    >
    (fToLift: StaticFunctor<C, ActBound, ActTBound>): LiftedResult<C, ActBound, ActTBound>
    
    interface StartVal {
        startVal: string
    }
    
    interface EndVal {
        endVal: number
    }
    
    
    declare const fooObj: FunctorFoo<StartVal>
    declare function stringLength(strarg: StartVal): EndVal
    
    const liftedStaticMap = lift(staticMap);
                                 ~~~~~~~~~
!!! error TS2345: Argument of type '<C1 extends Functor<C1, T1Bound, T1Bound>, T1Bound, A1, B1>(fa1: C1, fmap1: FMap<A1, B1>) => C1' is not assignable to parameter of type 'StaticFunctor<C, {}, {}>'.
!!! error TS2345:   Types of parameters 'fa1' and 'fa2' are incompatible.
!!! error TS2345:     Type 'C' is not assignable to type 'Functor<C1, {}, {}>'.
!!! error TS2345:       Type 'ActBound & Bounded<C, ActBound, AS, ActTBound>' is not assignable to type 'Functor<C1, {}, {}>'.
!!! error TS2345:         Property 'map' is missing in type 'Bounded<C, ActBound, AS, ActTBound>'.
    const liftedStringLength = liftedStaticMap(stringLength);
    const result = liftedStringLength(fooObj);
    const expectedType: FunctorFoo<EndVal> = result;
    const expectError = liftedStringLength(result)
    
    
    declare const declaredStaticFunctor: StaticFunctor<Functor, Functor>
    const liftedDeclaredStaticFunctor = lift(declaredStaticFunctor);
                                             ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'StaticFunctor<Functor<CX, AX, AXBound>, Functor<CX, AX, AXBound>, {}>' is not assignable to parameter of type 'StaticFunctor<C, Functor<CX, AX, AXBound>, {}>'.
!!! error TS2345:   Types of parameters 'fa2' and 'fa2' are incompatible.
!!! error TS2345:     Type 'C' is not assignable to type 'Functor<CX, AX, AXBound>'.
!!! error TS2345:       Type 'ActBound & Bounded<C, ActBound, AS, ActTBound>' is not assignable to type 'Functor<CX, AX, AXBound>'.
!!! error TS2345:         Property 'map' is missing in type 'Bounded<C, ActBound, AS, ActTBound>'.
    const liftedDeclaredStringLength = liftedDeclaredStaticFunctor(stringLength)
    const declaredResult = liftedDeclaredStringLength(fooObj);
    const expectedTypeDeclared: FunctorFoo<EndVal> = declaredResult;
    const expectErrorDeclared = liftedDeclaredStringLength(declaredResult)
    